<resources>
    <string name="app_name">EletricCar</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="no_wifi">Ops. Internet não Disponível</string>
    <string name="response_error">Algo deu errado tente novamente mais tarde</string>
    <string name="saved_calc">saved_calc</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="potencia">Potencia</string>
    <string name="recarga">Recarga</string>
    <string name="eletric_car">Eletric Car</string>
    <string name="calcular_autonomia">Calcular Autonomia</string>
    <string name="preco_km">Preço Km</string>
    <string name="calcular">Calcular</string>
    <string name="km_percorrido">Km Percorrido</string>
</resources>